<resources>
    <string name="app_name">D308 Vacation Planner</string>
    <string name="vacation_name_hint">Enter vacation name</string>
    <string name="hotel_name_hint">Enter hotel name</string>
    <string name="start_date_hint">Enter start date</string>
    <string name="end_date_hint">Enter end date</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="set_alert">Set Alert</string>
    <string name="share">Share</string>
    <string name="vacation_name_label">Vacation Name</string>
    <string name="hotel_name_label">Hotel Name</string>
    <string name="start_date_label">Start Date (DD-MM-YYYY)</string>
    <string name="end_date_label">End Date (DD-MM-YYYY)</string>
    <string name="delete_vacation_title">Delete Vacation</string>
    <string name="delete_vacation_message">Are you sure you want to delete this vacation?</string>
    <string name="no_vacation_to_delete">No vacation to delete</string>
    <string name="add_vacation" />
    <string name="vacation_name">Vacation Name</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="add_excursion">Add Excursion</string>
    <string name="textView_excursion_date">Excursion Date</string>

</resources>