<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BAC9C7B8">

    <!-- Vacation Information Section -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="81dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Vacation Name -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vacation_name_label" />

        <EditText
            android:id="@+id/vacation_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#B3A024"
            android:hint="@string/vacation_name_hint" />

        <!-- Hotel Name -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/hotel_name_label" />

        <EditText
            android:id="@+id/hotel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#B3A024"
            android:hint="@string/hotel_name_hint" />

        <!-- Start Date -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/start_date_label" />

        <EditText
            android:id="@+id/start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#B3A024"
            android:hint="@string/start_date_hint" />

        <!-- End Date -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/end_date_label" />

        <EditText
            android:id="@+id/end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#B3A024"
            android:hint="@string/end_date_hint" />

        <!-- Buttons for Vacation -->
        <LinearLayout
            android:id="@+id/button_layout_vacation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#2E3336"
                android:text="@string/save" />


        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>